# serializer version: 1
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_switch_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Switch 1',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_switch',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 Switch 1',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_switch_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_switch_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Switch 2',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_switch',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_2',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 Switch 2',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_switch_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_switch_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Switch 3',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_switch',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_3',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 Switch 3',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_switch_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_switch_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Switch 4',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_switch',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_4',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 Switch 4',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_switch_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_switch_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Switch 5',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_switch',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 Switch 5',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_switch_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_6-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_switch_6',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Switch 6',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_switch',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_6',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_6-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 Switch 6',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_switch_6',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_7-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_switch_7',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Switch 7',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_switch',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_7',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_7-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 Switch 7',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_switch_7',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_8-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'valve',
    'entity_category': None,
    'entity_id': 'valve.jie_hashui_fa_switch_8',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ValveDeviceClass.WATER: 'water'>,
    'original_icon': None,
    'original_name': 'Switch 8',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ValveEntityFeature: 3>,
    'translation_key': 'indexed_switch',
    'unique_id': 'tuya.cijerqyssiwrf7deqzkfsswitch_8',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[valve.jie_hashui_fa_switch_8-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'water',
      'friendly_name': '接HA水阀 Switch 8',
      'supported_features': <ValveEntityFeature: 3>,
    }),
    'context': <ANY>,
    'entity_id': 'valve.jie_hashui_fa_switch_8',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
